# app_window

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  build-wasm.sh  build.rs
.cargo/: config.toml
.github/workflows/: ci.yaml
SwiftAppWindow/: Package.swift
SwiftAppWindow/Sources/SwiftAppWindow/: AsyncBridge.swift  Coordinates.swift  Surface.swift  SwiftAppWindow.swift  Threading.swift  Window.swift
SwiftAppWindow/Sources/SwiftAppWindow/input/: DebugWindow.swift  DetectMainThreadPolicy.swift  PlatformCoalescedKeyboard.swift  PlatformCoalescedMouse.swift
SwiftAppWindow/Sources/SwiftAppWindowC/: example.c
SwiftAppWindow/Sources/SwiftAppWindowC/include/: CTypes.h  Rust.h
SwiftAppWindow/Tests/SwiftAppWindowTests/: SwiftAppWindowTests.swift
SwiftAppWindow/Tests/SwiftAppWindowTests/input/: SwiftRawInputTests.swift
design/: linux_decor.sketch
examples/: alert.rs  close.rs  fullscreen.rs  gpu.rs  input_main.rs  main.rs  shader.wgsl
examples/test_example/: Cargo.toml
examples/test_example/.cargo/: config.toml
examples/test_example/src/: lib.rs
examples/test_example/tests/: custom_harness_test.rs
linux_assets/: README.md
scripts/wasm32/: _env  tests
src/: application.rs  coordinates.rs  executor.rs  lib.rs  main_thread_cell.rs  some_executor.rs  surface.rs  sys.rs  test_support.rs  wgpu.rs  window.rs
src/input/: keyboard.rs  mod.rs  mouse.rs
src/input/keyboard/: key.rs  linux.rs  macos.rs  wasm.rs  windows.rs
src/input/keyboard/linux/: ax.rs
src/input/keyboard/linux/ax/: helpers.rs  keycode.rs  keyname.rs  keysym.rs
src/input/mouse/: linux.rs  macos.rs  wasm.rs  windows.rs
src/sys/: linux.rs  macos.rs  wasm.rs  windows.rs
src/sys/linux/: ax.rs  buffer.rs  cursor.rs  dispatchers.rs  main_thread.rs  mod.rs  window.rs
src/wgpu/: thread_cell.rs
tests/: executor_bug_test.rs  platform_coalesced_keyboard_test.rs  platform_coalesced_mouse_test.rs  submit_to_main_thread_benchmark.rs  wasm_main_closure_execution_test.rs
