[package]
name = "app_window"
version = "0.1.0"
edition = "2021"

[lib]


[features]
app_input = ["dep:app_input"]
some_executor = ["dep:some_executor"]
wgpu = ["dep:wgpu"]

[dependencies]
app_input = {version = "0.1.0", optional = true}
raw-window-handle = "0.6.2"
logwise = "0.2.3"
wgpu = {version = "23.0.1", optional = true}
thiserror = "2.0.9"
some_executor = {version = "0.4.0", optional = true}
continue = "0.1.0"

[dev-dependencies]
# needed for gpu example
wgpu = "23.0.1"
ampsc = "0.2.0"
some_executor = "0.4.0"


# macos
[target.'cfg(target_os = "macos")'.dependencies]
swift-rs = "1.0.7"


[target.'cfg(target_os = "macos")'.build-dependencies]
swift-rs = { version = "1.0.7", features = ["build"] }

# wasm32
[target.'cfg(target_arch="wasm32")'.dependencies]
web-sys = { version = "0.3.76", features=["CssStyleDeclaration"] }
wasm-bindgen = "0.2.99"
wasm_thread = "0.3.3"
wasm-bindgen-futures = "0.4.49"
ampsc = "0.2.0"
send_cells = "0.1.0"
#wasm32 requries some_executor to spawn tasks
some_executor = "0.4.0"

[target.'cfg(target_arch="wasm32")'.dev-dependencies]
console_error_panic_hook = "0.1.7"
wasm_thread = "0.3.3"

# windows

[target.'cfg(target_os="windows")'.dependencies]
windows = { version = "0.58.0", features=[
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
] }
send_cells = "0.1.0"

# linux
[target.'cfg(target_os="linux")'.dependencies]
libc = "0.2.169"
wayland-client = "0.31.7"
wayland-protocols = {version = "0.32.5", features = ["client"]}
tempfile = "3.15.0"
memmap2 = "0.9.5"
io-uring = "0.7.3"
[patch.crates-io]
send_cells = {git = "ssh://gitea@gitea.mermaid-gecko.ts.net/Metropolis/send_cells"}
# on windows we need patched wgpu, hopefully it upstreams post v23.0.1...
wgpu = {git = "https://github.com/drewcrawford/wgpu.git", branch="trunk"}
