[package]
name = "app_window"
version = "0.1.0"
edition = "2021"
authors = ["Drew Crawford <drew@sealedabstract.com>"]
description = "Cross-platform window library"
repository = "https://github.com/drewcrawford/app_window"
homepage = "https://sealedabstract.com/code/app_window"
license = "MPL-2.0"
keywords = ["window", "windowing"]
categories = ["gui", "os", "wasm"]
exclude = [".*"]
rust-version = "1.78.0"


[lib]


[features]
app_input = ["dep:app_input"]
some_executor = ["dep:some_executor"]
wgpu = ["dep:wgpu","dep:some_executor"]

[dependencies]
app_input = {version = "0.1.0", optional = true}
raw-window-handle = "0.6.2"
logwise = "0.2.3"
wgpu = {version = "24.0.1", optional = true}
thiserror = "2.0.9"
some_executor = {version = "0.4.1", optional = true}
continue = "0.1.0"
serde = { version = "1.0.217", features = ["derive"] }

[dev-dependencies]
# needed for gpu example
wgpu = "24.0.1"
ampsc = "0.2.0"
some_executor = "0.4.1"


# macos
[target.'cfg(target_os = "macos")'.dependencies]
swift-rs = "1.0.7"


[target.'cfg(target_os = "macos")'.build-dependencies]
swift-rs = { version = "1.0.7", features = ["build"] }

# wasm32
[target.'cfg(target_arch="wasm32")'.dependencies]
web-sys = { version = "0.3.76", features=["CssStyleDeclaration"] }
wasm-bindgen = "0.2.99"
wasm_thread = "0.3.3"
wasm-bindgen-futures = "0.4.49"
ampsc = "0.2.0"
send_cells = "0.1.1"
#wasm32 requries some_executor to spawn tasks
some_executor = "0.4.1"

[target.'cfg(target_arch="wasm32")'.dev-dependencies]
console_error_panic_hook = "0.1.7"
wasm_thread = "0.3.3"

# windows

[target.'cfg(target_os="windows")'.dependencies]
windows = { version = "0.58.0", features=[
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
] }
send_cells = "0.1.0"
# we use to submit wgpu to local executor
some_executor = { version = "0.4.1", optional=true }

# linux
[target.'cfg(target_os="linux")'.dependencies]
libc = "0.2.169"
wayland-client = "0.31.7"
wayland-backend = {version = "0.3.7", features=["client_system"]}
wayland-protocols = {version = "0.32.5", features = ["client"]}
wayland-cursor = "0.31.7"
memmap2 = "0.9.5"
io-uring = "0.7.3"
zune-png = "0.4.10"
# probably at some point this will be a global requirement,
# for now we only NEED it to advertise decorations on linux
accesskit = "0.17.1"
accesskit_unix = "0.13.1"
send_cells = "0.1.0"
some_local_executor = "0.1.2"

